--- a/ShopFlowers/flowers/templates/flowers.html
+++ b/ShopFlowers/flowers/templates/flowers.html
@@ -19,7 +19,7 @@
 
                 <div class="cat-pots" style="border-bottom: 1px solid rgba(114, 121, 88, 1);"><a href="{% url 'pots' %}">Горшки и кашпо</a></div>
 
-                <div class="cat-care" style="border-bottom: 1px solid rgba(114, 121, 88, 1);"><a href=#>Уход за растениями</a></div>
+                <div class="cat-care" style="border-bottom: 1px solid rgba(114, 121, 88, 1);"><a href="{% url 'care' %}">Уход за растениями</a></div>
             </div>
         </div>
     </section>
