--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -20,8 +20,8 @@
 
         <div class="networks">
             <a href="{% url 'flowers' %}">Комнатные растения</a>
-            <a href="#">Горшки для растений</a>
-            <a href="#">Уход за растениями</a>
+            <a href="{% url 'pots' %}">Горшки для растений</a>
+            <a href="{% url 'care' %}">Уход за растениями</a>
             <a href="{% url 'about' %}">О нас</a>
             <a href="{% url 'services' %}">Услуги</a>
         </div>
