--- a/ShopFlowers/flowers/static/css/flower_style.css
+++ b/ShopFlowers/flowers/static/css/flower_style.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: 'myFontMirra';
+    src: url('../fonts/Mirra.otf');
+}
+
+.fon {
+    background-image: url(../images/fon-flowers3.png);
+    background-size: cover;
+    padding-bottom: 100px;
+}
+
 .breadcrumb {
     margin-left: 320px;
     padding-top: 20px;
@@ -22,10 +33,10 @@
 
 .flower-list {
     display: grid;
-    grid-template-column: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 10px;
-    margin: 0 25% 0 25%;
-    width: 50%;
+    margin: 0 20% 0 20%;
+    width: 60%;
     padding-top: 50px;
 }
 
@@ -42,11 +53,13 @@ flower-list>.flower-img{
     grid-column: 2;
 }
 
-.flower-list>.flower-text {
+/* .flower-list>.flower-text {
     grid-column: 1 / span 2;
-}
+} */
 
 .flower-title {
+    font-family: 'myFontMirra';
+    font-weight: bold;
     font-size: 14pt;
     border-bottom: 1px solid rgba(114, 121, 88, 1);
     padding-bottom: 10px;
@@ -61,7 +74,7 @@ flower-list>.flower-img{
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
-    border-radius: 10px;
+    border-radius: 25px;
     color: rgba(214, 215, 210, 1)
 }
 
@@ -74,9 +87,66 @@ flower-list>.flower-img{
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
-    border-radius: 10px;
+    border-radius: 25px;
     color: rgba(40, 49, 6, 1);
 }
 
+
+.carousel {
+    height: 200px;
+    width: 900px;
+    margin: 100px 10px 100px 10px; 
+    overflow: hidden;  
+    margin: 0 auto;
+}
+
+.list-assortment {
+    height: 185px;
+    display: flex;
+    position: relative;
+}
+
+.assortment {
+    width: 150px;
+    text-align: center;
+    font-size: 8pt;
+    transition: 1s;
+}
+
+.assortment img {
+    float: left;
+}
+
+.assortment-control button {
+    font-size: 14pt;
+    border: none;
+    color: rgba(114, 121, 88, 1);
+    font-weight: bold;
+    background: transparent;    
+    position: absolute;
+    top: 800px;
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+}
+
+button.next {
+    right: 225px;
+}
+
+button.prev {
+    left: 220px;
+}
+
+.assortment-control button:active, .assortment-control button:hover {    
+    color: rgba(114, 121, 88, 1);
+    transform: scale(1);
+    box-shadow: 3px 2px 22px 1px rgba(40, 49, 6, 1);
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+}
 
 
