--- a/ShopFlowers/cart/static/css/cart_style.css
+++ b/ShopFlowers/cart/static/css/cart_style.css
@@ -189,12 +189,13 @@
 }
 
 
+
 /* Сообщение об отмене */
 .messages {
-    background: rgba(209, 216, 184, 0.3);
-    border-radius: 15px;
+    text-align: center;
 }
 
 .messages-text {
     color: rgba(40, 49, 6, 1);
+
 }
