--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -61,7 +61,9 @@
     {% block base_content %}
 
     {% endblock base_content %}
-
+    <section>
+        <h1 style="text-align: center;">Подписка на соц сети</h1>
+    </section>
     <section class="basement">
         <div class="logo_basement">
             <img src="{% static 'images/logo.jpg' %}">
