--- a/ShopFlowers/users/templates/profile.html
+++ b/ShopFlowers/users/templates/profile.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li><a href="{% url 'order-profile' %}" class="bt-my-orders">Мои покупки</a></li>
-                <li><a class="bt-my-feedback">Мои отзывы</a></li>
+                <li><a href="{% url 'feedback-profile' %}" class="bt-my-feedback">Мои отзывы</a></li>
                 <li><a class="bt-my-like">Избранное</a></li>
             </ul>
         </div>
