--- a/ShopFlowers/flowers/static/css/flower_style.css
+++ b/ShopFlowers/flowers/static/css/flower_style.css
@@ -53,10 +53,6 @@ flower-list>.flower-img{
     grid-column: 2;
 }
 
-/* .flower-list>.flower-text {
-    grid-column: 1 / span 2;
-} */
-
 .flower-title {
     font-family: 'myFontMirra';
     font-weight: bold;
@@ -65,29 +61,27 @@ flower-list>.flower-img{
     padding-bottom: 10px;
 }
 
-.cart button {
-    height: 50px;
+.cart-button {
+    padding: 10px 20px 10px 20px;
     border-style: none;
     background-color: rgba(114, 121, 88, 1);
-    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 12px;
-    border-radius: 25px;
+    font-size: 14px;
+    border-radius: 30px;
     color: rgba(214, 215, 210, 1)
 }
 
-.cart button:hover {
-    height: 50px;
+.cart-button:hover {
+    padding: 10px 20px 10px 20px;
     border-style: none;
     background-color: rgba(209, 216, 184, 1);
-    padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 12px;
-    border-radius: 25px;
+    font-size: 14px;
+    border-radius: 30px;
     color: rgba(40, 49, 6, 1);
 }
 
@@ -149,4 +143,58 @@ button.prev {
     text-align: center;
 }
 
+
+
+
+/* Отзывы */
+.feedback-list {
+    margin: 0 100px 0 100px;
+}
+
+.feedback-count-rating-mean {
+    color: rgba(40, 49, 6, 0.8);
+    cursor: pointer;
+}
+
+.feedback-count-rating-mean:hover {
+    color: rgba(199, 194, 171, 1);
+    cursor: pointer;
+}
+
+.feedback {
+    box-shadow: 0 0 30px rgba(209, 216, 184, 1);
+    border-radius: 25px;
+}
+
+.feedback-info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 10px 0 10px 0;
+    align-items: center;
+}
+
+.info-left {
+    margin: 0 0 0 20px;
+    justify-self: start;
+    color: rgba(40, 49, 6, 1);
+}
+
+.info-right {
+    display: flex;
+    gap: 20px;
+    margin: 0 20px 0 0;
+    justify-self: end;
+    color: rgba(40, 49, 6, 1);
+}
+
+.info-center {
+    grid-column: span 2;
+    margin: 0 0 0 20px;
+    color: rgba(40, 49, 6, 1);
+}
+
+.feedback-img {
+    margin: 0 0 0 20px;
+    padding-bottom: 15px;
+}
 
