--- a/ShopFlowers/flowers/templates/flower.html
+++ b/ShopFlowers/flowers/templates/flower.html
@@ -94,16 +94,16 @@
                 </div>
 
                 <div class="feedback-img">
-                    {% if feedback.images_feedback.image1 %}
-                        <img src="{{ feedback.images_feedback.image1.url }}" width="100px" height="120px">
+                    {% if feedback.image1 %}
+                        <img src="{{ feedback.image1.url }}" width="100px" height="120px">
                     {% endif %}
 
-                    {% if feedback.images_feedback.image2 %}
-                        <img src="{{ feedback.images_feedback.image2.url }}" width="100px" height="120px">
+                    {% if feedback.image2 %}
+                        <img src="{{ feedback.image2.url }}" width="100px" height="120px">
                     {% endif %}
 
-                    {% if feedback.images_feedback.image3 %}
-                        <img src="{{ feedback.images_feedback.image3.url }}" width="100px" height="120px">
+                    {% if feedback.image3 %}
+                        <img src="{{ feedback.image3.url }}" width="100px" height="120px">
                     {% endif %}
                 </div>
             </div>
