--- a/ShopFlowers/users/templates/profile.html
+++ b/ShopFlowers/users/templates/profile.html
@@ -31,7 +31,7 @@
             <div class="name-photo">
                 <div class="bt-user-change">
                     <img class="user-photo" src="{{ user.photo.url }}">
-<!--                    {{ form.photo }}-->
+                    {{ form.photo }}
                 </div>
                 <h2 class="user-name">{{ user.username }}</h2>
             </div>
@@ -65,7 +65,6 @@
                 </div>
             </div>
             <button class="save-profile" type="submit">Сохранить</button>
-
         </div>
         </form>
     </div>
