--- a/ShopFlowers/static/css/base_style.css
+++ b/ShopFlowers/static/css/base_style.css
@@ -64,35 +64,28 @@ nav form {
     width: 100px;
 }
 
-.find input {
+.find-input {
     border: none;
     border-radius: 2px;
     outline: 1px solid DimGrey;
     background: transparent;
+    width: 160px;
+    padding: 5px 0 5px 0;
 }
 
 .find button {
     border: none;
     outline: none;
     background: transparent;
-}
-
-.find input {
-    width: 150px;
-    height: 30px;
-    padding-left: 15px;
-}
-
-.find button {
     position: absolute;
     top: 0;
-    right: -50px;
+    left: 130px;
     cursor: pointer;
 }
 
 .find img {
     position: relative;
-    top: 5px;
+    top: 3px;
     height: 20px;
     width: 20px;
 }
@@ -116,13 +109,6 @@ nav .user{
     width: 20px;
     height: 20px;
     padding-right: 10px;
-}
-
-.p-base-total-quantity {
-    text-decoration: none;
-    color: rgba(40, 49, 6, 1);
-    font-size: 10pt;
-    position: absolute;
 }
 
 .basement {
@@ -153,12 +139,12 @@ nav .user{
     text-align: center;
 }
 
-
-
-
-
-
-
+.social-networks {
+    background-image: url(../images/social-networks.png);
+    background-size: cover;
+    height: 180px;
+    margin-top: 10px;
+}
 
 
 .dropdown-user {
